# lucidagentide

./: .gitattributes  .gitignore  AGENTS.md  BUILD PLAN omp.md  CHEATSHEET.md  CLAUDE.md  DECISIONS.md  HANDOFF-covert-r-forwarder.md  HANDOFF.md  KG-PACKS-STATUS.md  LICENSE  LucidAgentIDE.bat  Makefile  PROGRESS.md  README.md  STATUS-since-v1.11.3.md  custom_agentic_ide_prd_v3.md  package.json  snake.html  tsconfig.json
.agents/: README.md
.claude/: launch.json  settings.local.json
.githooks/: pre-commit
.github/: dependabot.yml
Casks/: lucidagentide.rb
desktop/: README.md  SIGNING.md  about.test.ts  acp.ts  acp_backend.ts  addon_seam.test.ts  addon_seam.ts  agent_builder.test.ts  agent_run.test.ts  agent_run.ts  agent_run_kms.test.ts  ailoc_log.test.ts  ailoc_log.ts  ailoc_read.ts  ailoc_view.test.ts  ailoc_view.ts  asksage.ts  audit_export.test.ts  audit_export.ts  auth_status.test.ts  auth_status.ts  auth_vault.test.ts  auth_vault.ts  automations.test.ts  automations.ts  budget_gate.test.ts  chat_bg.ts  chat_gate.test.ts  chat_gate.ts  checker_model.test.ts  checker_model.ts  code_graph.test.ts  code_graph.ts  cred_vault.test.ts  cred_vault.ts  design_doc.test.ts  design_doc.ts  dev.ts  editor.test.ts  editor.ts  (+154 more)
docs/: AGENT-FIREWALL-TESTING.md  AGENT-FIREWALL.md  EXT-SECURE-BUILD.md  LINUX-ENTERPRISE-DEPLOYMENT.md  MACOS-ENTERPRISE-DEPLOYMENT.md  (+2 more)
scanner-sidecar/: demo_p2_1.py  pyproject.toml  scanner.py  server.py
scanner-sidecar/fixtures/: __init__.py  adversarial.py
scanner-sidecar/tests/: test_fixtures.py  test_scanner.py  test_server.py
(+676 files in other folders)
